# swagger-llm-plugin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pypi.txt  pyproject.toml
docs/: index.html
examples/: demo_server.py
src/docbuddy/: __init__.py  cli.py  plugin.py
src/docbuddy/static/: agent.js  chat.js  core.js  docbuddy-chat.js  docbuddy-core.js  docbuddy-workflow.js  llm-layout-plugin.js  llm-settings-plugin.js  settings.js  workflow.js
src/docbuddy/templates/: swagger_ui.html
src/swagger_llm/: __init__.py  dependencies.py  plugin.py
src/swagger_llm/static/: llm-layout-plugin.js  llm-settings-plugin.js
src/swagger_llm/static/themes/: dark-theme.css
src/swagger_llm/templates/: swagger_ui.html
src/swagger_llm_ui/: __init__.py  plugin.py
src/swagger_llm_ui/static/: code-export-plugin.js  llm-layout-plugin.js  llm-settings-plugin.js
src/swagger_llm_ui/static/themes/: light-theme.css
src/swagger_llm_ui/templates/: swagger_ui.html
tests/: test_plugin.py
